Empty tables Remove truncate hot key https://github.com/web-pal/DBGlass/issues/22

--- a/app/components/Main/Content/Footer/style.less
+++ b/app/components/Main/Content/Footer/style.less
@@ -5,3 +5,9 @@
   padding: 0px 12px;
   z-index: 50;
 }
+
+.empty-footer {
+  background-color: #fff;
+  min-height: 51px;
+  z-index: 50;
+}
